# telegram-bot

./: .gitignore  README.md  database.py  decode.json  docker-compose.yml  dockerfile  keyboards.py  location_plot.py  main.py  out.json  out2.json  process_weather_data.py  pyproject.toml  requirements.txt  sync.py  test_out
.gspread/: sheet-database-395306-fa93d0ea2e6e.json
src/: database.py  main.py  pg_dump.py  pg_sync.py  sync.py
src/utils/: add_conv.py  admin.py  automn_conv.py  commands.py  delete_conv.py  edit_conv.py  keyboards.py  logger.py  message_generator.py  number_transformer.py  register_conv.py  regular_jobs.py  set_location_conv.py  sms_funcs.py  table_generator.py  weather_api.py  weather_conv.py
