[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "A telegram bot offering data driven insights to farmers"
authors = ["Amirr95 <arrezvaniyan@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.0"
jdatetime = "^4.1.1"
requests = "^2.31.0"
aiohttp = "^3.9.0"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
